# sac-dj

./: .env.example  .gitignore  Dockerfile  README.md  README_SCRIPTS.txt  alembic.ini  check_status.bat  docker-compose.yml  init_db.py  install_model.bat  pyproject.toml  requirements.txt  setup.bat  start_all.bat  start_api.bat  start_frontend.bat  start_ollama.bat  test_spacy.py  update.bat  validate_system.py
.streamlit/: config.toml
app/: config.py  database.py  dependencies.py  main.py
app/api/: auth.py  documents.py  validation.py
app/config/: config.py  prompts.py
app/core/: __init__.py  agent.py  graph.py  nodes.py  prompts.py  state.py
app/db/: config.py
app/models/: base.py  database_models.py  document.py  enums.py  pydantic_schemas.py
app/services/: agent_service.py  analysis_service.py  document_service.py  nlp_service.py  ollama_service.py
app/utils/: prompt_utils.py
frontend/: app.py  config.py  requirements.txt
frontend/pages/: classification.py  dashboard.py  validation.py
migrations/: env.py
tests/: create_test_data.py  test_basic.py
